added about section and styled it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="./mediaqueries.css">
 </head>
 
+<!-- HOME PAGE  and HAMBURER MENU-->
 <body>
+    <nav id="navbar">
     <header class="header">
         <div class="logo">
             <a href="###"> Diego Onofri</a>
@@ -19,21 +21,76 @@
             <input type="checkbox" class="toggle-menu">
             <div class="hamburger"></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#navbar">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+   </header>
+    </nav>
 
+    <!-- MAIN PROFILE -->
 
+   <section id="profile">
+    <div class="section-profile-image">
+        <img src="./assets/Screenshot_20210211-171443~2-modified.png" alt="Diego onofri profile picture"/>
+     </div>
+     <div class="section-text">
+        <p class="section-text-p1"> Hello world, I'm</p>
+        <h1 class="title"> Diego Onofri</h1>
+        <p class="section-text-p2"> Full stack developer</p>
+        <div class="button-container">
+            <a class="button-1" href="./assets/resume-example.pdf" target="_blank">Download CV</a>
+            <a class="button-1" href="###" target="_blank">Contact me</a>
+        </div>
 
+        <div id="socials-container">
+          <a href="https://au.linkedin.com/" target="_blank"> <img src="assets/linkedin.png" alt="My linked in profile" class="icon"></a>
+          <a href="https://github.com/" target="_blank"> <img src="assets/github.png" alt="My Github profile" class="icon"></a>
 
+        </div>
+    </div>
+   </section>
 
-    </header>
+<!-- ABOUT ME SECTION-->
 
+   <section id="about">
+     
+         <div class="about-header">
+             <h3>About.</h3>
+             <p>Get to know me more</p>  
+             <h3>My name is Diego</h3>
+         </div>
+         <div class="about-main-container">
+             <div class="about-container">
+                 <div class="about-icons">
+                 <img src="./assets/education.png">
+                 </div>
+                 <h3>Education</h3>
+                 <p>2015 / 2016 <br> Coder Academy Sydney</p> 
+                 <p>Higher education  diploma of IT</p>
+              </div>
+             <div class="about-container">
+                 <div class="about-icons">
+                 <img src="./assets/experience.png" alt="experience icon">
+                 </div>
+             <h3>Experience</h3>
+             <p>1 year. <br> Full stack developer at Amazon, Italy</p>
+             <p>2 year. <br> Back end developer at Glovo, Spain</p>
+             
+             </div>
+             <div class="about-pic">
+              <img src="./assets/about me.jpg" alt="My face">
+              </div>
+         </div>
+         <div class="whoami">
+            <h3>About me</h3>
+             <p>Hello! 👋 I'm a passionate full-stack developer with a zest for exploration. When I'm not immersed in coding, you'll find me traversing the globe, eager to connect with diverse cultures and individuals. My love for travel is rivaled only by my enthusiasm for working on captivating projects that push the boundaries of technology. In the fast-paced world of motocross, I thrive on the adrenaline rush it provides, mirroring the dynamic challenges I tackle in the coding realm. Let's embark on a journey of innovation and adventure together! 🌐💻🏍️
+             </p>
+            </div>
 
-
+ </section>
 
 
 
