added experience and styled it

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="menu">
                 <li><a href="#navbar">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Experience</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -92,7 +92,71 @@
 
  </section>
 
+<!-- EXPERIENCE SECTION -->
 
+<section id="experience">
+  <div class="experience-main-container">
+         <div class="experience-header">
+           <h3>Experience</h3>
+           <p>Good at some</p>
+           <h3>And always learning</h3>
+
+         </div>
+         <div class="progress-bar">
+            <div class="bar-container">
+                <div>
+                    <img src="./assets/html.png" alt="html logo">
+                </div>
+              <div class="progress-container">
+                <div class="progress-html"> 80%</div>
+              </div>
+            </div>
+
+            <div class="bar-container">
+                <div>
+                    <img src="./assets/css-3.png" alt="css logo">
+                </div>
+              <div class="progress-container">
+                <div class="progress-css">65%</div>
+              </div>
+            </div>
+
+            <div class="bar-container">
+                <div>
+                    <img src="./assets/java-script.png" alt="javascript logo">
+                </div>
+              <div class="progress-container">
+                <div class="progress-js">50%</div>
+              </div>  
+            </div>
+         </div>
+    </div>
+
+    <div class="skills-container">
+
+        <div class="skills">
+         <div class="skill-icon">
+            <img src="./assets/thought-bubble.png" alt="thinking icon">
+         </div>
+         <h3>Problem solver</h3>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam nemo, vitae labore dicta incidunt maxime qui, architecto culpa a molestias placeat. Aut, quaerat eos quis mollitia error nulla magni necessitatibus.</p>
+       </div>
+
+    
+        <div class="skills">
+         <div class="skill-icon">
+            <img src="./assets/paper.png" alt="attentive icon">
+         </div>
+         <h3>Attention to detail</h3>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam nemo, vitae labore dicta incidunt maxime qui, architecto culpa a molestias placeat. Aut, quaerat eos quis mollitia error nulla magni necessitatibus.</p>
+       </div>
+
+
+
+
+    </div>
+
+</sextion>
 
 </body>
 </html>
