--- a/blog-typefast.html
+++ b/blog-typefast.html
@@ -20,10 +20,10 @@
             <input type="checkbox" class="toggle-menu">
             <div class="hamburger"></div>
             <ul class="menu">
-                <li><a href="#navbar">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./index.html#navbar">Home</a></li>
+                <li><a href="./index.html#about">About</a></li>
+                <li><a href="./index.html#experience">Experience</a></li>
+                <li><a href="./index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </nav>
