final commit for now

--- a/blog-typefast.html
+++ b/blog-typefast.html
@@ -23,13 +23,14 @@
                 <li><a href="./index.html#navbar">Home</a></li>
                 <li><a href="./index.html#about">About</a></li>
                 <li><a href="./index.html#experience">Experience</a></li>
+                <li><a href="./index.html#blog">Blog</a></li>
                 <li><a href="./index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </nav>
 
         <section id="blog1">
-            <div class="blogpost">
+            <article class="blogpost">
                  <h3>Typefast.io</h3>
 
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, exercitationem odio recusandae harum eligendi sapiente, eveniet tempora cumque adipisci perspiciatis est dolorem possimus nam, quo maxime pariatur doloribus id esse.</p>
@@ -37,7 +38,22 @@
                 <img src="assets/download (1).jpeg" alt="image">
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam deserunt explicabo illum quasi officia nobis! Qui assumenda voluptatem dolorem culpa praesentium vero. Nam minus, assumenda hic esse quae facilis. Necessitatibus.</p>
-            </div>
+            </article>
+                <footer>
+                    <div class="footer-container">
+                      <nav class="navigation">
+                  
+                        <ul class="menu">
+                            <li><a href="./index.html#profile">Home</a></li>
+                            <li><a href="./index.html#about">About</a></li>
+                            <li><a href="./index.html#experience">Experience</a></li>
+                            <li><a href="./index.html#blog">Blog</a></li>
+                            <li><a href="./index.html#contact">Contact</a></li>
+                        </ul>
+                    </nav>
+                  </div>
+                  </footer>
+               
         </section>
 
 
