--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
 
-    <!-- MAIN PROFILE -->
+    <!-- MAIN PROFILE -->‹
 
    <section id="profile">
     <div class="section-profile-image">
@@ -44,12 +44,12 @@
         <p class="section-text-p2"> Full stack developer</p>
         <div class="button-container">
             <a class="button-1" href="./assets/Diego_Onofri_Resume.pdf" target="_blank">Download CV</a>
-            <a class="button-1" href="#contact" target="_blank">Contact me</a>
+            <a class="button-1" href="#contact">Contact me</a>
         </div>
 
         <div id="socials-container">
           <a href="https://au.linkedin.com/" target="_blank"> <img src="assets/linkedin.png" alt="My linked in profile" class="icon"></a>
-          <a href="https://github.com/" target="_blank"> <img src="assets/github.png" alt="My Github profile" class="icon"></a>
+          <a href="https://github.com/poysongnocchi" target="_blank"> <img src="assets/github.png" alt="My Github profile" class="icon"></a>
 
         </div>
     </div>
@@ -154,7 +154,7 @@
             <img src="./assets/paper.png" alt="attentive icon">
          </div>
          <h3>Attention to detail</h3>
-         <p>Ensuring precision in code and system architecture. I meticulously scrutinize every line of code, leaving no room for errors. With a fine-tuned focus, i excell at catching nuances that contribute to robust and reliable software solutions. As professional programmer my commitment to detail extends to user interfaces, creating seamless and polished experiences for end-users.p>
+         <p>Ensuring precision in code and system architecture. I meticulously scrutinize every line of code, leaving no room for errors. With a fine-tuned focus, i excell at catching nuances that contribute to robust and reliable software solutions. As professional programmer my commitment to detail extends to user interfaces, creating seamless and polished experiences for end-users.<p>
        </div>
 
 
@@ -267,6 +267,21 @@
     </div>
 </div>
 </section>
+
+<footer>
+  <div class="footer-container">
+    <nav class="navigation">
+
+      <ul class="menu">
+          <li><a href="#navbar">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#contact">Contact</a></li>
+      </ul>
+  </nav>
+</div>
+</footer>
 
 
 
